# my-cdn

./: .dockerignore  API.md  Cargo.toml  Dockerfile  README.md  docker-compose.yml  index.html
.github/workflows/: azure-static-web-apps-thankful-ocean-0ea5ad30f.yml
src/: main.rs
src/controllers/: media.rs  mod.rs
src/models/: mod.rs  upload.rs
src/services/: media.rs  mod.rs
