[package]
name = "cdn"
version = "0.1.0"
edition = "2024"

[dependencies]
aws-sdk-s3 ="1.118.0"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
tokio = { version = "1", features = ["full"] }
axum = "0.8.7"
serde = { version = "1.0", features = ["derive"] }
tower-http = { version = "0.5", features = ["trace", "cors"] }
aws-credential-types = "1.2.11"
aws-smithy-types = "1.3.5"
http = "1.4.0"
anyhow = "1.0.100"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1.10", features = ["v4"] }
